fix: cards-wrap max-height

--- a/workflow/landing-page/sources/style/main.css
+++ b/workflow/landing-page/sources/style/main.css
@@ -438,7 +438,7 @@ nav {
     align-content: space-between;
 
     width: 100%;
-    max-height: 1500px;
+    max-height: 1700px;
 }
 
 .card {
